--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -170,7 +170,7 @@ body {
   margin-block: 10px;
   text-align: center;
   color: var(--violet-light-color);
-  padding-inline: 10px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 900px) {
@@ -379,6 +379,7 @@ body {
   .middle_Links_Container {
     width: 100%;
     justify-content: space-between;
+    gap: 20px;
   }
 }
 
@@ -391,6 +392,7 @@ body {
 .middle_Links_Container > .Links_Container > .LinkHeading {
   font-weight: 800;
   font-size: 17px;
+  width: max-content;
 }
 
 .Links_Container > .Links_pages {
