changes donr new section created

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,8 +104,10 @@ body::-webkit-scrollbar {
   --violet-light-color: #42264b;
   --dark-violet-color: #363636;
   --green-color: #2ed789;
+  --yellow-color: #f8ca20;
   --very-light-violet-color: #f7f7ff;
   --light-input-color: #f8f9fb;
+  --very-light-grey-color: "#f5f5f5";
   --grey-color: #b8c1cb;
   --dark-grey-color: #798491;
   --light-dark-grey-color: #f3f4f6;
@@ -132,27 +134,6 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
   margin-top: 10px;
-}
-
-@media only screen and (max-width: 1070px) {
-  /* For mobile phones: */
-  .feature_section_Container {
-    height: 1400px;
-  }
-}
-
-@media only screen and (max-width: 540px) {
-  /* For mobile phones: */
-  .feature_section_Container {
-    height: 1500px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  /* For mobile phones: */
-  .feature_section_Container {
-    height: 1700px;
-  }
 }
 
 .heading {
@@ -456,4 +437,28 @@ body {
 
 .hover-underline-animation.left:hover::after {
   transform-origin: bottom left;
+}
+
+.straightforward_div::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 99%;
+  background-color: var(--primary-color);
+  position: absolute;
+  bottom: -5.5px;
+  right: 45%;
+  z-index: 100;
+}
+
+.straightforward_div::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 99%;
+  background-color: var(--primary-color);
+  position: absolute;
+  top: 33%;
+  right: -5.5px;
+  z-index: 100;
 }
